bin_PROGRAMS = btbridged

btbridged_SOURCES = btbridged.cpp

btbridged_LDFLAGS = \
	$(SYSTEMD_LIBS) \
	$(PHOSPHOR_LOGGING_LIBS)

btbridged_CXXFLAGS = \
	-flto \
	-Wno-psabi \
	$(SYSTEMD_CFLAGS) \
	$(SDBUSPLUS_CFLAGS) \
	$(PHOSPHOR_LOGGING_CFLAGS) \
	-DBOOST_ERROR_CODE_HEADER_ONLY \
	-DBOOST_SYSTEM_NO_DEPRECATED \
	-DBOOST_COROUTINES_NO_DEPRECATION_WARNING \
	-DBOOST_ASIO_DISABLE_THREADS \
	-DBOOST_ALL_NO_LIB

